# adg-companion

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  bump-version.mjs  index.html  package-lock.json  package.json
.github/workflows/: release.yml
src/: App.jsx  styles.css  updater.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: adg.rs  lcu.rs  lib.rs  liveclient.rs  main.rs  outbox.rs  store.rs
