[package]
name = "adg-companion"
version = "0.0.2"
description = "ADG Companion — ARAM: Mayhem sync"
authors = ["ADG"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This is due to https://github.com/rust-lang/cargo/issues/8519
name = "adg_companion_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri           = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = { version = "2" }
serde           = { version = "1", features = ["derive"] }
serde_json      = "1"
tokio           = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }
reqwest         = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
sysinfo         = "0.32"
keyring         = { version = "3", features = ["windows-native"] }
dirs            = "5"
anyhow          = "1"
base64          = "0.22"
thiserror       = "2"
tauri-plugin-process = "2"

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto           = true
opt-level     = "s"
panic         = "abort"
strip         = true

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
